# RMemQueue

./: .gitignore  Cargo.toml  README.md
benches/: throughput.rs
docs/: api.md
docs/superpowers/specs/: 2026-05-02-rmemqueue-bugfix-design.md
examples/: async_basic.rs  consumer_group.rs  serde_json.rs  sync_basic.rs  typed_messages.rs
src/: base_consumer.rs  base_producer.rs  broker.rs  broker_backend.rs  config.rs  consumer.rs  consumer_group.rs  context.rs  error.rs  future_producer.rs  headers.rs  lib.rs  message.rs  metadata.rs  offset_store.rs  partition.rs  partition_assignor.rs  partitioner.rs  producer.rs  record.rs  registry.rs  stream_consumer.rs  stream_producer.rs  topic.rs  topic_partition.rs  typed.rs
tests/: integration_async.rs  integration_serde.rs  integration_sync.rs  integration_typed.rs
