[package]
name = "rmemqueue"
version = "0.1.0"
edition = "2021"
description = "Kafka-like in-memory message queue for inter-thread communication in Rust"
license = "MIT"

[dependencies]
thiserror = "2"
parking_lot = "0.12"
once_cell = "1"
log = "0.4"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"], optional = true }
futures-core = { version = "0.3", optional = true }
futures-sink = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

[features]
default = ["async"]
async = ["tokio", "futures-core", "futures-sink"]
serde = ["dep:serde", "dep:serde_json"]

[[bench]]
name = "throughput"
harness = false

[[test]]
name = "integration_async"
required-features = ["async"]

[[test]]
name = "integration_serde"
required-features = ["serde"]
